@@ -160,8 +160,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>12</release>
-                    <encoding>UTF-8</encoding>
+		  <source>12</source>
+                  <target>12</target>
+	          <encoding>UTF-8</encoding>
+		  
+		  <compilerArgs>
+		    <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+		    <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+		  </compilerArgs>
                 </configuration>
             </plugin>
 
